tests/baselines/reference/project/noDefaultLib/node/noDefaultLib.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
test.ts(3,8): error TS2304: Cannot find name 'Array'.


!!! Cannot find global type 'Array'.
!!! Cannot find global type 'Boolean'.
!!! Cannot find global type 'Function'.
!!! Cannot find global type 'IArguments'.
!!! Cannot find global type 'Number'.
!!! Cannot find global type 'Object'.
!!! Cannot find global type 'RegExp'.
!!! Cannot find global type 'String'.
==== test.ts (1 errors) ====
    /// <reference no-default-lib="true"/>
    
    var x: Array<number>;
           ~~~~~~~~~~~~~
!!! Cannot find name 'Array'.
    
    